# rubSQL

./: CMakeLists.txt
src/interpreter/commands/: interface.cpp  interface.h
src/interpreter/commands/ddl/: commands.cpp  commands.hpp
src/interpreter/commands/designs/: attribute.hpp  column.hpp  database.hpp  datatypes.hpp  designs.hpp  table.hpp
src/interpreter/parser/: parser.c  parser.tab.h  parser.y
src/interpreter/parser/helper/: collector.hpp  collector_interface.cpp  collector_interface.h  helper.h  types.c  types.h
src/interpreter/scanner/: lexer.c  lexer.l
testbuild/: lex.yy.c  program  y.tab.c  y.tab.h
